k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-js-webapp-deploy
  labels:
    app: node-js-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-js-webapp
  template:
    metadata:
      labels:
        app: node-js-webapp
    spec:
      containers:
      - name: node-js-webapp
        image: node-js-webapp:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
