k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-js-webapp-svc
spec:
  selector:
    app: node-js-webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort
