k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-js-webapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: node-js-webapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-js-webapp-svc
            port:
              number: 80
